3.37.2:
-EVEN MORE optimized session deleting (for edge-case bug, where session data doesn't delete after runtime)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.38.0:
-Improved Raspberry PI auto-install script
-Improved cache error logging semantics
-Improved documentation
-------------------------------------------------------------------



-------------------------------------------------------------------
3.38.1:
-Additional improved chart loading UX
-Bug fix for auto install script (automated cron job creation routine)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.39.0:
-Renamed install script (for semantics)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.40.0:
-Improved auto-install script UX
-------------------------------------------------------------------



-------------------------------------------------------------------
3.40.1:
-Fix for edge-case auto-install script error
-Tighter security on any generated .htaccess file permissions
-Auto-install script now supports setting up: htaccess / mod_rewrite / SSL (secure HTTPS web addresses)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.40.2:
-Bug fix for proper cron.d owner permissions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.41.0:
-Improved documentation
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.0:
-UX revisions
-------------------------------------------------------------------









